--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,14 +1,16 @@
 {
-    "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      }
+    "builds":[
+        {
+            "src":"*.js",
+            "use":"@vercel/node"
+        }
+        
     ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "server.js"
-      }
+    "routes":[
+        {
+            "src":"/(.*)",
+            "dest":"/"      
+        }
     ]
-  }
+   
+}
