--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds":[
         {
-            "src":"*.js",
+            "src":"server.js",
             "use":"@vercel/node"
         }
         
@@ -9,7 +9,7 @@
     "routes":[
         {
             "src":"/(.*)",
-            "dest":"/"      
+            "dest":"/server.js"      
         }
     ]
    
